# MagicSquare_33

./: .cursorrules  README.md  defect_list.md  pyproject.toml  run_gui.bat
Prompt/: 01.cursor_4x4_magic_square_problem_definit.md  02.cursor_.md  03.cursor_rules_user_entity_transcript.md  04.cursor_project_rules_mdc_migration_transcript.md  05.cursor_code_reviewer_agent_transcript.md  06.cursor_prd_writing_review_transcript.md  07.cursor_readme_tdd_start_transcript.md  08.cursor_qa_defect_structure_transcript.md  09.cursor_dual_track_red_design_transcript.md  10.cursor_dual_track_red_skeleton_transcript.md  11.cursor_ac_fr_01_01_invalid_size_green_transcript.md  12.cursor_multi_slice_green_entity_control_screen_transcript.md  13.cursor_golden_master_regression_transcript.md  14.cursor_ecb_refactor_plan_analysis_transcript.md  15.cursor_rf06_puzzle_boundary_receive_pipeline_refactor_transcript.md  16.cursor_refactor_export_baseline_transcript.md  17.cursor_session_summary_refactor_14_16_transcript.md
Report/: 01.문제정의_보고서.md  02.DualTrack_CleanArch_TDD_설계.md  03.CursorRules_UserEntity_구현보고서.md  04.ProjectRules_MDC_Migration_구현보고서.md  05.CodeReviewer_Agent_구현보고서.md  06.PRD_작성_검토_구현보고서.md  07.README_TDD_시작_구현보고서.md  08.QA_Defect_Structure_구현보고서.md  09.DualTrack_RED_설계_구현보고서.md  10.DualTrack_RED_Skeleton_구현보고서.md  11.AC_FR_01_01_InvalidSize_GREEN_구현보고서.md  12.MultiSlice_GREEN_Entity_Control_Screen_구현보고서.md  13.Golden_Master_회귀_구현보고서.md  14.ECB_REFACTOR_계획_분석보고서.md  15.RF06_PuzzleBoundary_Receive_Pipeline_REFACTOR_구현보고서.md  16.REFACTOR_Export_베이스라인_실측_구현보고서.md  (+1 more)
(+66 files in other folders)
